--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>Choose a script</h1>
-<a href="cacheInfo.html">Cache Info</a>
+<a href="cacheInfo.html">Cache Info</a> <br>
+<a href="cacheAddress.html">Cache Address</a> <br>
 </body>
 </html>
