--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <h1>Choose a script</h1>
 <a href="cacheInfo.html">Cache Info</a> <br>
 <a href="cacheAddress.html">Cache Address</a> <br>
+<a href="VMaddressTranslation.html">VM Address</a> <br>
+<a href="toBin.html">To Binary</a> <br>
 </body>
 </html>
