--- a/cacheInfo.html
+++ b/cacheInfo.html
@@ -5,9 +5,6 @@
 	<meta charset="UTF-8">
 	<script lang="javascript" src="cacheInfo.js"></script>
 	<script type="text/javascript">
-		function getVal(id){
-			return document.getElementById(id).value;
-		};
 		window.onload=function(){
 			(function () {
 			    var old = console.log;
@@ -22,11 +19,12 @@
 			})();
 
 			document.getElementById("go").onclick=function(){
-				B = getVal("B")
-				E = getVal("E")
-				C = getVal("C")
-				m = getVal("m")
-				cacheInfo(B, E, C, m)
+				cacheInfo(
+					document.getElementById("B").value, 
+					document.getElementById("E").value, 
+					document.getElementById("C").value, 
+					document.getElementById("m").value,
+				)
 			}
 		}
 	</script>
