added pages for checksum

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <a href="cacheAddress.html">Cache Address</a> <br>
 <a href="VMaddressTranslation.html">VM Address</a> <br>
 <a href="toBin.html">To Binary</a> <br>
+<a href="internetCheckSumString.html">Internet checksum of a string</a> <br>
+<a href="internetCheckSumBytes.html">Internet checksum of bytes</a> <br>
 </body>
 </html>
