added html for crc and sloppy hash

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <a href="toBin.html">To Binary</a> <br>
 <a href="internetCheckSumString.html">Internet checksum of a string</a> <br>
 <a href="internetCheckSumBytes.html">Internet checksum of bytes</a> <br>
+<a href="sloppyHash.html">Sloppy hash from page 640</a> <br>
+<a href="crc.html">Cyclic redundancy check</a> <br>
 </body>
 </html>
