Better folder structure

--- a/VMAddressTranslation.html
+++ b/VMAddressTranslation.html
@@ -3,7 +3,7 @@
 <head>
 	<title>VM Address</title>
 	<meta charset="UTF-8">
-	<script lang="javascript" src="VMAddressTranslation.js"></script>
+	<script lang="javascript" src="js/VMAddressTranslation.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			(function () {
