--- a/cacheAddress.html
+++ b/cacheAddress.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Cache Address</title>
 	<meta charset="UTF-8">
-	<script lang="javascript" src="cacheAddress.js"></script>
+	<script lang="javascript" src="js/cacheAddress.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			(function () {
