--- a/cacheInfo.html
+++ b/cacheInfo.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Cache Info</title>
 	<meta charset="UTF-8">
-	<script lang="javascript" src="cacheInfo.js"></script>
+	<script lang="javascript" src="js/cacheInfo.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			(function () {
@@ -23,7 +23,7 @@
 					document.getElementById("B").value, 
 					document.getElementById("E").value, 
 					document.getElementById("C").value, 
-					document.getElementById("m").value,
+					document.getElementById("m").value
 				)
 			}
 		}
