--- a/crc.html
+++ b/crc.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Sloppy hash function</title>
 	<meta charset="UTF-8">
-	<script lang="javascript" src="crc.js"></script>
+	<script lang="javascript" src="js/crc.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			(function () {
@@ -28,7 +28,7 @@
 	</script>
 </head>
 <body>
-<h1>Sloppy hash function from page 640</h1>
+<h1>Cyclic redundancy check</h1>
 <a href="index.html">Index</a> <br> <br>
 <p>D (in binary, no 0b prefix)</p>
 <input type="text", id="D"><br> <br>
