--- a/internetCheckSumString.html
+++ b/internetCheckSumString.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Checksum string</title>
 	<meta charset="UTF-8">
-	<script lang="javascript" src="internetCheckSum.js"></script>
+	<script lang="javascript" src="js/internetCheckSum.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			(function () {
