--- a/sloppyHash.html
+++ b/sloppyHash.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Sloppy hash function</title>
 	<meta charset="UTF-8">
-	<script lang="javascript" src="sloppyHashPage640.js"></script>
+	<script lang="javascript" src="js/sloppyHashPage640.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			(function () {
