--- a/toBin.html
+++ b/toBin.html
@@ -3,7 +3,7 @@
 <head>
 	<title>To Binary</title>
 	<meta charset="UTF-8">
-	<script lang="javascript" src="toBin.js"></script>
+	<script lang="javascript" src="js/toBin.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			(function () {
@@ -21,7 +21,7 @@
 			document.getElementById("go").onclick=function(){
 				toBin(
 					document.getElementById("num").value, 
-					document.getElementById("len").value, 
+					document.getElementById("len").value
 				)
 			}
 		}
