added addressTable page

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <a href="internetCheckSumBytes.html">Internet checksum of bytes</a> <br>
 <a href="sloppyHash.html">Sloppy hash from page 640</a> <br>
 <a href="crc.html">Cyclic redundancy check</a> <br>
+<a href="addressTable.html">Cache address table (for translating multiple addresses). This has some formating issues making it kinda hard to read result</a> <br>
 </body>
 </html>
